Finished parser that transfers map data into human text.